crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_name.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 0..21,
                    codes: [
                        RuleIdent {
                            identifier: Name(
                                "unused-import",
                            ),
                            range: 8..21,
                        },
                    ],
                },
            ),
        },
    ),
)
