crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_names.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 0..44,
                    codes: [
                        RuleIdent {
                            identifier: Name(
                                "unused-import",
                            ),
                            range: 14..27,
                        },
                        RuleIdent {
                            identifier: Name(
                                "unused-variable",
                            ),
                            range: 29..44,
                        },
                    ],
                },
            ),
        },
    ),
)
